Open Mod UI > Tools and click History for full change details:

- added Path of the Yeoman subclass
- promoted Wizard Graviturgist subclass from BETA