@@ -496,10 +496,10 @@ ConditionGambitSwitchBad	ConditionDefinition	ConditionDefinition	fe120078-b16c-5
 ConditionGambitSwitchGood	ConditionDefinition	ConditionDefinition	5a1371fc-8437-5db6-90d0-a6af55962e6d
 ConditionGambitThreaten	ConditionDefinition	ConditionDefinition	4be70ef4-02a2-5be8-be5d-342141bd66d8
 ConditionGambitUrgent	ConditionDefinition	ConditionDefinition	4d8a5ac8-ea3d-5e38-a470-3ef45a33ae26
+ConditionGrappledRestrainedIceBound	ConditionDefinition	ConditionDefinition	968f2f49-dd5a-5f60-99e0-fe22f189bad2
 ConditionGrappledRestrainedSpellWeb	ConditionDefinition	ConditionDefinition	7593e0f9-a1ff-539c-bf19-9ba1c7abfd60
 ConditionGravity	ConditionDefinition	ConditionDefinition	769144d3-9ceb-5f25-8e2a-9d73962ba8f6
 ConditionGrayDwarfStoneStrength	ConditionDefinition	ConditionDefinition	589ea78b-5040-5d01-9537-dbe11d38c032
-ConditionIceBound	ConditionDefinition	ConditionDefinition	a52cfee4-895e-5b3a-abf7-4176f6fa68d8
 ConditionImprovedWarDanceMomentumExtraAction	ConditionDefinition	ConditionDefinition	00b18930-bc36-56aa-b9a1-1569a30f53d9
 ConditionInnovationAlchemyDamageLightning	ConditionDefinition	ConditionDefinition	335c1058-8477-5fe5-8b96-17e10a4a03e3
 ConditionInnovationAlchemyDamageNecrotic	ConditionDefinition	ConditionDefinition	a414f3b0-c616-5d8f-8e38-4fd598d43881
@@ -693,7 +693,8 @@ ConditionWrathfulSmite	ConditionDefinition	ConditionDefinition	b551eee2-5f52-552
 ConditionWrathfulSmiteEnemy	ConditionDefinition	ConditionDefinition	08ab37a6-23bc-59c3-ac2b-09f02170a996
 9999	ContentPackDefinition	ContentPackDefinition	81c2b331-87e1-51f4-a035-33adf3429def
 DamagePure	DamageDefinition	DamageDefinition	c5cbdb1e-040d-55a7-bbdb-d56c40f14ab8
-DecisionBreakFreeSpellWeb	TA.AI.DecisionDefinition	TA.AI.DecisionDefinition	4d99161d-c547-503c-b294-cdc3285db276
+DecisionBreakFreeConditionGrappledRestrainedIceBound	TA.AI.DecisionDefinition	TA.AI.DecisionDefinition	017c5b82-f11c-5899-8729-947eabcf949f
+DecisionBreakFreeConditionGrappledRestrainedSpellWeb	TA.AI.DecisionDefinition	TA.AI.DecisionDefinition	61e7fc96-8cb5-5c2b-8a67-75fbef4f333a
 EarthTremorRubbleProxy	EffectProxyDefinition	EffectProxyDefinition	091216b0-c7db-5de3-ac32-43c23e8dbf6b
 EffectGreenElementalBreath	EffectProxyDefinition	EffectProxyDefinition	1b305d09-3001-59d9-a97f-32ba86034933
 EffectProxyMantleOfThorns	EffectProxyDefinition	EffectProxyDefinition	6aabc7d1-2a74-59b8-919d-7d7f6a317f7c
@@ -1788,7 +1789,6 @@ MovementAffinityConditionWarDanceExtraMovement3	FeatureDefinitionMovementAffinit
 MovementAffinityFeatCallForCharge	FeatureDefinitionMovementAffinity	FeatureDefinition	15255204-db4e-59d4-9046-c6ceff8eca80
 MovementAffinityFeatMobile	FeatureDefinitionMovementAffinity	FeatureDefinition	bd7b8c83-622b-5546-8e55-f591e0a3d526
 MovementAffinityFeatSlasher	FeatureDefinitionMovementAffinity	FeatureDefinition	694aae13-baf4-59b2-90fe-0df3629aada0
-MovementAffinityIceBound	FeatureDefinitionMovementAffinity	FeatureDefinition	7d0eec3c-812b-5f9c-8639-7e656940991b
 MovementAffinityInnovationArmorArmoredUp	FeatureDefinitionMovementAffinity	FeatureDefinition	3ba750c1-204e-5f9d-8cde-65e2a6f86e5d
 MovementAffinityInnovationArmorInfiltratorMode	FeatureDefinitionMovementAffinity	FeatureDefinition	1e5e7453-c9fd-5999-914d-9f974adbac98
 MovementAffinityMagnifyGravity	FeatureDefinitionMovementAffinity	FeatureDefinition	b787a5a7-f7ee-5c8a-a4ce-8d730f3a7632
@@ -3562,7 +3562,6 @@ MovementAffinityConditionWarDanceExtraMovement3	FeatureDefinitionMovementAffinit
 MovementAffinityFeatCallForCharge	FeatureDefinitionMovementAffinity	FeatureDefinitionMovementAffinity	15255204-db4e-59d4-9046-c6ceff8eca80
 MovementAffinityFeatMobile	FeatureDefinitionMovementAffinity	FeatureDefinitionMovementAffinity	bd7b8c83-622b-5546-8e55-f591e0a3d526
 MovementAffinityFeatSlasher	FeatureDefinitionMovementAffinity	FeatureDefinitionMovementAffinity	694aae13-baf4-59b2-90fe-0df3629aada0
-MovementAffinityIceBound	FeatureDefinitionMovementAffinity	FeatureDefinitionMovementAffinity	7d0eec3c-812b-5f9c-8639-7e656940991b
 MovementAffinityInnovationArmorArmoredUp	FeatureDefinitionMovementAffinity	FeatureDefinitionMovementAffinity	3ba750c1-204e-5f9d-8cde-65e2a6f86e5d
 MovementAffinityInnovationArmorInfiltratorMode	FeatureDefinitionMovementAffinity	FeatureDefinitionMovementAffinity	1e5e7453-c9fd-5999-914d-9f974adbac98
 MovementAffinityMagnifyGravity	FeatureDefinitionMovementAffinity	FeatureDefinitionMovementAffinity	b787a5a7-f7ee-5c8a-a4ce-8d730f3a7632
