@@ -1,19 +1,23 @@
 {
   "$type": "ConditionDefinition, Assembly-CSharp",
   "inDungeonEditor": false,
-  "parentCondition": null,
+  "parentCondition": "Definition:ConditionGrappled:b9e3fa435129c33459a4847c9c551265",
   "conditionType": "Detrimental",
   "features": [
-    "Definition:MovementAffinityIceBound:7d0eec3c-812b-5f9c-8639-7e656940991b"
+    "Definition:MovementAffinityConditionRestrained:ed9d9d5986e47f845819579f936ee8cc",
+    "Definition:CombatAffinityRestrained:dc755d1ea6b1ff0429ff9650d4a2d318",
+    "Definition:SavingThrowAffinityConditionRestrained:fbdda0611e9c1254aa76ad4e303c668d",
+    "Definition:ActionAffinityConditionRestrained:0a11d859909c2624086506f327824de8",
+    "Definition:ActionAffinityGrappled:1c2c02a0e9f823c489b3d62d03534617"
   ],
   "allowMultipleInstances": false,
   "silentWhenAdded": false,
   "silentWhenRemoved": false,
   "terminateWhenRemoved": false,
-  "specialDuration": true,
+  "specialDuration": false,
   "durationType": "Round",
   "durationParameterDie": "D1",
-  "durationParameter": 1,
+  "durationParameter": 2,
   "forceTurnOccurence": false,
   "turnOccurence": "EndOfTurn",
   "specialInterruptions": [],
@@ -25,7 +29,9 @@
   "interruptionSavingThrowAffinity": "None",
   "conditionTags": [],
   "recurrentEffectForms": [],
-  "cancellingConditions": [],
+  "cancellingConditions": [
+    "Definition:ConditionSwallowedRemorhaz:1bf833241755e684fbef755a54de3fd6"
+  ],
   "additionalDamageWhenHit": false,
   "additionalDamageTypeDetermination": "Specific",
   "additionalDamageType": "",
@@ -263,12 +269,12 @@
   "guiPresentation": {
     "$type": "GuiPresentation, Assembly-CSharp",
     "hidden": false,
-    "title": "Condition/&ConditionIceBoundTitle",
-    "description": "Condition/&ConditionIceBoundDescription",
+    "title": "Condition/&ConditionGrappledRestrainedIceBoundTitle",
+    "description": "Condition/&ConditionGrappledRestrainedIceBoundDescription",
     "spriteReference": {
       "$type": "UnityEngine.AddressableAssets.AssetReferenceSprite, Unity.Addressables",
-      "m_AssetGUID": "57125544a666ad64195b2eddc133deb4",
-      "m_SubObjectName": "RayOfFrostConditionHindered",
+      "m_AssetGUID": "d89ea9eef65da0d46a12c4ff40481527",
+      "m_SubObjectName": "ConditionRestrained",
       "m_SubObjectType": "UnityEngine.Sprite, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null"
     },
     "color": {
@@ -284,7 +290,7 @@
     "usedInValleyDLC": false
   },
   "contentCopyright": "UserContent",
-  "guid": "a52cfee4-895e-5b3a-abf7-4176f6fa68d8",
+  "guid": "968f2f49-dd5a-5f60-99e0-fe22f189bad2",
   "contentPack": 9999,
-  "name": "ConditionIceBound"
+  "name": "ConditionGrappledRestrainedIceBound"
 }
