@@ -1,51 +1,0 @@
-{
-  "$type": "FeatureDefinitionMovementAffinity, Assembly-CSharp",
-  "appliesToAllModes": true,
-  "moveMode": "Walk",
-  "baseSpeedAdditiveModifier": 0,
-  "additiveModifierAdvancement": "None",
-  "additiveModifierByLevelTable": [],
-  "forceMinimalBaseSpeed": false,
-  "minimalBaseSpeed": 6,
-  "baseSpeedMultiplicativeModifier": 0.0,
-  "minMaxMoves": 0,
-  "speedAddBase": false,
-  "fastClimber": false,
-  "expertClimber": false,
-  "canMoveOnWalls": false,
-  "canFlyWithWalkSpeed": false,
-  "enhancedJump": false,
-  "additionalJumpCells": 0,
-  "immuneDifficultTerrain": false,
-  "disableVault": false,
-  "disableDrop": false,
-  "disableJump": false,
-  "disableClimb": false,
-  "additionalFallThreshold": 0,
-  "encumbranceImmunity": false,
-  "heavyArmorImmunity": false,
-  "situationalContext": "None",
-  "additionalDashTag": null,
-  "guiPresentation": {
-    "$type": "GuiPresentation, Assembly-CSharp",
-    "hidden": false,
-    "title": "Feature/&NoContentTitle",
-    "description": "Feature/&NoContentTitle",
-    "spriteReference": null,
-    "color": {
-      "$type": "UnityEngine.Color, UnityEngine.CoreModule",
-      "r": 1.0,
-      "g": 1.0,
-      "b": 1.0,
-      "a": 1.0
-    },
-    "symbolChar": "221E",
-    "sortOrder": 0,
-    "unusedInSolastaCOTM": false,
-    "usedInValleyDLC": false
-  },
-  "contentCopyright": "UserContent",
-  "guid": "7d0eec3c-812b-5f9c-8639-7e656940991b",
-  "contentPack": 9999,
-  "name": "MovementAffinityIceBound"
-}
