@@ -3,7 +3,9 @@
 1.4.33.88:
 
 - added Path of the Yeoman subclass
-- promoted Wizard Graviturgist subclass from BETA
+- changed Binding Ice and Toll the Dead to be closer to TT
+- fixed Merciless fighting style applying endless fear
+- took Wizard Graviturgist subclass off beta
 
 1.4.33.87:
 
